// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | LinkSell LinkSell 1`] = `
<a
  className="Link__StyledLink-apj04t-0 ixkkIR LinkSell__StyledLink-c5ecjk-0 kjvaTR"
  href="/somewhere"
  onClick={[Function]}
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
  >
    Sell
  </span>
</a>
`;

exports[`Storyshots Molecules | LinkSell LinkSell disabled 1`] = `
<span
  className="LinkSell__StyledLink-c5ecjk-0 Gelnm"
  disabled={true}
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
  >
    Sell
  </span>
</span>
`;

exports[`Storyshots Molecules | LinkSell LinkSell with rel as nofollow 1`] = `
<a
  className="Link__StyledLink-apj04t-0 ixkkIR LinkSell__StyledLink-c5ecjk-0 kjvaTR"
  href="/somewhere"
  onClick={[Function]}
  rel="nofollow"
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
  >
    Sell
  </span>
</a>
`;
